# qt-property-macros

./: .clang-format  AutoPropertyHelpers.h  CMakeLists.txt  ConstRefPropertyHelpers.h  EnumClassHelper.h  HelpersCommon.h  ListPropertyHelper.h  PropertyHelpers.h  PtrPropertyHelpers.h  QQmlAutoPropertyHelpers.h  QQmlConstRefPropertyHelpers.h  QQmlEnumClassHelper.h  QQmlHelpers.cpp  QQmlHelpersCommon.h  QQmlListPropertyHelper.h  QQmlPropertyHelpers.h  QQmlPtrPropertyHelpers.h  QQmlSingletonHelper.h  QQmlVarPropertyHelpers.h  QtPropertyMacros.pri  QtPropertyMacros.pro  README.md  SingletonHelper.h
.github/workflows/: clang-format-lint.yaml
